settime-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-time
  namespace: default
spec:
  containers:
  - image: busybox:1.28.4
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
    securityContext:
      capabilities:
        add:
        - SYS_TIME
  restartPolicy: Always
