denyall.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-access-pods
spec:
  podSelector: {}
  policyTypes:
  - Ingress
